# xopenai

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README.zh.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: config.py  logger.py  main.py  metrics.py
app/converters/: __init__.py  request.py  response.py  retry.py
app/routes/: health.py  v1.py
app/schemas/: anthropic.py  openai.py
app/services/: http_client.py  messages.py  models.py
conf/: prometheus.yml  settings.json  settings.json.example
docs/: lessons-learned.md  progress.md
docs/superpowers/plans/: 2026-05-04-anthropic2openai.md  2026-05-04-xopenai.md
docs/superpowers/specs/: 2026-05-04-anthropic2openai-design.md  2026-05-04-xopenai-design.md
tests/: test_auth.py  test_config.py  test_converters.py  test_http_client.py  test_logger.py  test_metrics.py  test_routes.py  test_services.py
